# WebGPUTracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
.github/workflows/: windows_build.yml  windows_build_dawn.yml  windows_build_wgpu.yml
glfw/: README.md
glfw/src/: CMakeLists.txt
resources/shader/: compute-sample.wgsl  path_tracer.wgsl  shader.wgsl  triangle.wgsl
settings/: run.ps1  run.py
src/: camera.cpp  main.cpp  render.cpp  renderer.h  scene.cpp
src/include/: camera.h  renderer.h  scene.h
src/include/objects/: box.h  cornell_box.h  quad.h  scene.h  sphere.h  triangle.h  vertex.h
src/include/utils/: color_util.h  print_util.h  save_texture.h  util.h  vec3.h  wgpu_util.h
src/objects/: box.cpp  cornell_box.cpp  quad.cpp  scene.cpp  triangle.cpp  vertex.cpp
src/utils/: print_util.h  save_texture.h  wgpu_util.h
utils/: wgpu_util.h
